# HelloRenderingEngine

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  TestMinimal.cpp  debug_test.cpp
Demo/: CMakeLists.txt  CMakePresets.json  DemoMain.cpp
Demo/Examples/: FileSystem.cpp  FileSystem.hpp  PonyPolygons.cpp  PonyPolygons.hpp
Demo/Shaders/: Disc.fs  Disc.vs  Disc2D.vs  Identity.vs  IdentityDouble.vs  IdentityTextured2D.vs  Identity_2D.vs  Mandelbrot.fs  Mandelbrot.vs  MixedTextures.fs  Monochrome2.fs  Textured.fs
Demo/Shaders/Fragment/2D/: DiscTextured.fs  Mandelbrot.fs
Demo/Shaders/Fragment/General/: MixedTextures.fs  Monochrome.fs
Demo/Shaders/Vertex/2D/: DiscTextured.vs  FixedColouredTri.vs  Identity.vs  IdentityTwiceTextured.vs
Demo/TestingUtilities/: GLFWWrappers.cpp  GLFWWrappers.hpp
LLMs/Claude/: OPEN_ITEMS.md  README.md  SEQUOIA_TOOLING.md  TESTIMONIAL.md  sync.sh
Source/avocet/: CMakeLists.txt
Source/avocet/Core/AssetManagement/: Image.cpp  Image.hpp
Source/avocet/Core/Formatting/: Formatting.cpp  Formatting.hpp
Source/avocet/Core/Geometry/: Extent.hpp  PolygonCoordinates.hpp  Viewport.cpp  Viewport.hpp
Source/avocet/Core/Preprocessor/: PreprocessorDefs.hpp
Source/avocet/Core/RenderArea/: Viewport.cpp  Viewport.hpp
Source/avocet/Core/ShaderCompilation/: ShaderCompiler.cpp  ShaderCompiler.hpp
Source/avocet/Core/Utilities/: ArithmeticCasts.hpp  ContainerUtilities.hpp
Source/avocet/Debugging/OpenGL/: DebugMode.hpp  Errors.cpp  Errors.hpp
Source/avocet/Geometry/OpenGL/: Polygon.hpp  PrimitiveGeometry.cpp  PrimitiveGeometry.hpp  Triangle.hpp
Source/avocet/Graphics/Core/: Image.cpp  Image.hpp  Images.cpp  Images.hpp
Source/avocet/Graphics/OpenGL/: Buffers.hpp  Core.hpp  Errors.cpp  Errors.hpp  GLFunction.hpp  Labels.hpp  ObjectIdentifiers.hpp  ResourceHandle.hpp  Resources.cpp  Resources.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Textures.cpp  Textures.hpp
Source/avocet/OpenGL/Capabilities/: Capabilities.cpp  Capabilities.hpp  CapabilitiesConfiguration.cpp  CapabilitiesConfiguration.hpp  CapabilityManager.hpp
Source/avocet/OpenGL/Context/: Capabilities.cpp  Capabilities.hpp  CapabilitiesConfiguration.cpp  CapabilitiesConfiguration.hpp  CharacteristicContext.cpp  CharacteristicContext.hpp  Context.cpp  Context.hpp  ContextBase.cpp  ContextBase.hpp  DecoratedContext.hpp  GLFunction.hpp  GLGetters.hpp  Version.cpp  Version.hpp
Source/avocet/OpenGL/ContextBase/: ContextBase.cpp  ContextBase.hpp  DebugMode.hpp  GLFunction.hpp  Version.cpp  Version.hpp
Source/avocet/OpenGL/Debugging/: DebugMode.hpp  Errors.cpp  Errors.hpp
Source/avocet/OpenGL/DecoratedContext/: DecoratedContext.cpp  DecoratedContext.hpp  GLFunction.hpp  Version.cpp  Version.hpp
Source/avocet/OpenGL/EnrichedContext/: ActivatingContext.hpp  BindingContext.hpp  CapableContext.hpp  DecoratedContext.cpp  DecoratedContext.hpp
Source/avocet/OpenGL/Geometry/: Polygon.hpp
Source/avocet/OpenGL/Graphics/: Buffers.hpp  GLFunction.hpp  GenericResource.hpp  Labels.hpp  ResourceHandle.hpp  Resources.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Textures.cpp  Textures.hpp
Source/avocet/OpenGL/ResourceInfrastructure/: ContextualResouceView.hpp  ContextualResource.hpp  ContextualResourceView.hpp  GenericResource.hpp  Labels.cpp  Labels.hpp  ObjectIdentifiers.hpp  ResourceHandle.hpp
Source/avocet/OpenGL/Resources/: Buffers.hpp  ContextualResource.hpp  Framebuffer.cpp  Framebuffer.hpp  GenericResource.hpp  Labels.hpp  ResourceHandle.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Textures.cpp  Textures.hpp
Source/avocet/OpenGL/StateAwareContext/: CapableContext.hpp  ResourcefulContext.hpp
Source/avocet/OpenGL/StateManagingContext/: ActivatingContext.hpp  CapableContext.hpp  ResourcefulContext.hpp
Source/avocet/OpenGL/Utilities/: Casts.hpp  Context.cpp  Context.hpp  ContextResolver.hpp  GLCompatibility.hpp  GLFunction.hpp  Messages.cpp  Messages.hpp  ObjectIdentifiers.hpp  TypeTraits.hpp  Version.cpp  Version.hpp
Source/avocet/Preprocessor/Core/: PreprocessorDefs.hpp
Source/avocet/Utilities/OpenGL/: Casts.hpp  TypeTraits.hpp  Version.cpp  Version.hpp
Source/avocet/Vulkan/: VulkanConfig..hpp  VulkanConfig.cpp
Source/avocet/Vulkan/Common/: Casts.hpp  Conversions.cpp  Conversions.hpp  Formatting.hpp  VulkanConfig.cpp  VulkanConfig.hpp
Source/avocet/Vulkan/Presentation/: Presentation.cpp  Presentation.hpp
Source/avocet/Vulkan/Rendering/: RenderingSystem.cpp  RenderingSystem.hpp
Source/avocet/Vulkan/Setup/: Devices.cpp  Devices.hpp  Instance.cpp  Instance.hpp
Source/avocet/Vulkan/Shaders/: Shaders.cpp  Shaders.hpp
TestAll/: CMakeLists.txt  TestAllMain.cpp
TestingUtilities/curlew/: CMakeLists.txt
TestingUtilities/curlew/TestFramework/: GraphicsLabellingTestCore.cpp  GraphicsLabellingTestCore.hpp  GraphicsTestCore.cpp  GraphicsTestCore.hpp
TestingUtilities/curlew/Window/: ContextResolverImpl.cpp  GLFWWrappers.cpp  GLFWWrappers.hpp  RenderingSetup.cpp  RenderingSetup.hpp  VulkanInitialization.cpp  VulkanInitialization.hpp  WindowConfigurations.hpp
coverage_reports/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
coverage_reports/Algorithms/: Algorithms.hpp.func-c.html  Algorithms.hpp.func.html  Algorithms.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_reports/FileSystem/: FileSystem.hpp.func-c.html  FileSystem.hpp.func.html  FileSystem.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_reports/Linux_Mesa_OpenGL_4_5_Debug/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
coverage_reports/Parsing/: CommandLineArguments.cpp.func-c.html  CommandLineArguments.cpp.func.html  CommandLineArguments.cpp.gcov.html  CommandLineArguments.hpp.func-c.html  CommandLineArguments.hpp.func.html  CommandLineArguments.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_reports/PlatformSpecific/: Helpers.cpp.func-c.html  Helpers.cpp.func.html  (+4 more)
scripts/: generate_coverage_report.sh  install_ubuntu_dependencies.sh  run_with_lsan_suppressions.sh
(+3447 files in other folders)
